postgres db with docker compose
